# sentinel-cosmic

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml  scorecard.yml
crates/pam-sentinel/: Cargo.toml
crates/sentinel-helper-kde/: .qmlls.ini  Cargo.toml  build.rs
crates/sentinel-helper-kde/qml/: DetailRow.qml  DialogCard.qml  Main.qml  Windowed.qml
crates/sentinel-helper-kde/src/: bridge.rs  main.rs
