[package]
name = "pam-sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PAM module for graphical privilege-escalation confirmation"

[lib]
name = "pam_sentinel"
crate-type = ["cdylib"]

[dependencies]
pam-bindings = "0.3"
sentinel-shared = { path = "../sentinel-shared" }
log.workspace = true
nix.workspace = true

[build-dependencies]
